[gd_scene load_steps=5 format=3 uid="uid://k0xmbgkh6qsr"]

[ext_resource type="Script" path="res://scenes/RadialRhythmDisplay.gd" id="1_vay8g"]
[ext_resource type="PackedScene" uid="uid://go3uoaxvmabe" path="res://scenes/marker.tscn" id="2_fhsth"]
[ext_resource type="Texture2D" uid="uid://cs8gdb5suhtdi" path="res://icon.svg" id="3_ovd33"]
[ext_resource type="Texture2D" uid="uid://dhf0km4u7ccxo" path="res://scenes/14.png" id="3_wiwrd"]

[node name="RadialRhythmDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_vay8g")
marker = ExtResource("2_fhsth")
outerOffset = 0.9
beatDivisonColors = Color(1, 0.862745, 0.839216, 0.615686)
laneLineResolution = 90

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_wiwrd")
expand_mode = 1

[node name="CenterPivot" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineRenderers" type="Control" parent="CenterPivot"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Markers" type="Control" parent="CenterPivot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ArmContainer" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159

[node name="Arm" type="TextureRect" parent="ArmContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2.08165e-12, 5)
texture = ExtResource("3_ovd33")
expand_mode = 1
